<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_COM" Id="{67abe526-aa6e-43e5-b162-30df36039d30}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	
	//NAME -> UPPER CASE
	ON: BOOL := TRUE;
	OFF: BOOL := FALSE;
		
	//Analog Ramp Control	
	RTM_UNIT: TIME;//System Analog Ramping Time unit
	
	s_is_RCP_pause: BOOL;
	s_is_RAMP_stop: BOOL;
	s_is_RAMP_restart: BOOL;

    KL1501_Error: BOOL;//KL1501
	    		
	//Function Execute Bit
	s_EN_EXE_RCP: BOOL;
	s_EN_EXE_DOR_ATM: BOOL;
	s_EN_EXE_DOR_VAC: BOOL;
	s_EN_EXE_ROT_CALI: BOOL;
	
	s_cm_ALL_MC_on: BOOL;
	s_is_All_MC_on: BOOL;
	
	s_en_ROT_JOG: BOOL;
	s_en_ROT_INCH: BOOL;
	s_en_DO_TEST: BOOL;
	
	//P_AL_Rised : BOOL;	
	s_cm_RST: BOOL;	
	s_DOR_CNT: INT;//DOR Alarm check
	s_is_DOR_Broken: BOOL; //IB00_Reactor_Close_Warn : BOOL;

	s_P_RampEN: BOOL;
			
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>