<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_P2P" Id="{191f2543-9070-4153-a2ee-bcf4a76cc0cd}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	
	//DeviceNet - Solenoid Block1
	Tx_SOL1	AT%QB8: DWORD;	//Word for bit operation
	//DeviceNet - Solenoid Block2
	Tx_SOL2	AT%QB12: DWORD;	//Word for bit operation

	//DeviceNet - Throttle Valve - Byte
	Rx_TV_ST	AT%IB201: BYTE;
	Rx_TV_CDG2_L	AT%IB202: BYTE;
	Rx_TV_CDG2_H	AT%IB203: BYTE;
	Rx_TV_CDG1_L	AT%IB204: BYTE;
	Rx_TV_CDG1_H	AT%IB205: BYTE;
	Rx_TV_SP_L	AT%IB206: BYTE;
	Rx_TV_SP_H	AT%IB207: BYTE;
	Rx_TV_POS_L	AT%IB208: BYTE;
	Rx_TV_POS_H	AT%IB209: BYTE;
	Tx_TV_Mode	AT%QB201: BYTE;
	Tx_TV_SP_L	AT%QB202: BYTE;
	Tx_TV_SP_H	AT%QB203: BYTE;
	Tx_TV_SP_Type	AT%QB204: BYTE;
	
	Tx_TV_Arr AT%QB201: ARRAY[0..3] OF BYTE;
	//DeviceNet - Throttle Valve - 2Byte To WORD
	Rx_TV_CDG2 AT%IB202 : WORD;
	Rx_TV_CDG1 AT%IB204 : WORD;
	Rx_TV_SP AT%IB206 : WORD;
	Rx_TV_POS AT%IB208 : WORD;
	Tx_TV_SP AT%QB202 : WORD;
	
	//DeviceNet - Induction Heater E3508 - Byte
	Rx_IH_PV_L	AT%IB220	: BYTE;
	Rx_IH_PV_H	AT%IB221	: BYTE;
	Rx_IH_SV_L	AT%IB222	: BYTE;
	Rx_IH_SV_H	AT%IB223	: BYTE;
	Rx_IH_TSV_L	AT%IB224	: BYTE;
	Rx_IH_TSV_H	AT%IB225	: BYTE;
	Rx_IH_MOUT_L	AT%IB226	: BYTE;
	Rx_IH_MOUT_H	AT%IB227	: BYTE;
	Rx_IH_AL_L	AT%IB228	: BYTE;
	Rx_IH_AL_H	AT%IB229	: BYTE;
	Rx_IH_AM_L	AT%IB230	: BYTE;
	Rx_IH_AM_H	AT%IB231	: BYTE;
	Rx_IH_AT_ST_L	AT%IB232	: BYTE;
	Rx_IH_AT_ST_H	AT%IB233	: BYTE;
	Rx_IH_P_L	AT%IB234	: BYTE;
	Rx_IH_P_H	AT%IB235	: BYTE;
	Rx_IH_I_L	AT%IB236	: BYTE;
	Rx_IH_I_H	AT%IB237	: BYTE;
	Rx_IH_D_L	AT%IB238	: BYTE;
	Rx_IH_D_H	AT%IB239	: BYTE;
	Tx_IH_TSV_L	AT%QB220	: BYTE;
	Tx_IH_TSV_H	AT%QB221	: BYTE;
	Tx_IH_AM_L	AT%QB222	: BYTE;
	Tx_IH_AM_H	AT%QB223	: BYTE;
	Tx_IH_MOUT_L	AT%QB224	: BYTE;
	Tx_IH_MOUT_H	AT%QB225	: BYTE;
	Tx_IH_AL_CR_L	AT%QB226	: BYTE;
	Tx_IH_AL_CR_H	AT%QB227	: BYTE;
	Tx_IH_AT_EN_L	AT%QB228	: BYTE;
	Tx_IH_AT_EN_H	AT%QB229	: BYTE;
	Tx_IH_ABS_HI_L	AT%QB230	: BYTE;
	Tx_IH_ABS_HI_H	AT%QB231	: BYTE;
	//DeviceNet - Induction Heater E3508 - 2Byte To WORD
	Rx_IH_PV	AT%IB220	: WORD;			
	Rx_IH_SV	AT%IB222	: WORD;			
	Rx_IH_TSV	AT%IB224	: WORD;			
	Rx_IH_MOUT	AT%IB226	: WORD;			
	Rx_IH_AL	AT%IB228	: WORD;			
	Rx_IH_AM	AT%IB230	: WORD;			
	Rx_IH_AT_ST	AT%IB232	: WORD;			
	Rx_IH_P	AT%IB234	: WORD;			
	Rx_IH_I	AT%IB236	: WORD;			
	Rx_IH_D	AT%IB238	: WORD;			
	Tx_IH_TSV	AT%QB220	: WORD;			
	Tx_IH_AM	AT%QB222	: WORD;			
	Tx_IH_MOUT	AT%QB224	: WORD;			
	Tx_IH_AL_CR	AT%QB226	: WORD;			
	Tx_IH_AT_EN	AT%QB228	: WORD;			
	Tx_IH_ABS_HI	AT%QB230	: WORD;
		
				
   //LineHeater Controller(MC9-8RD0SS32) x 1EA
	RxBuf_LH : ComBuffer;
	TxBuf_LH : ComBuffer;
	in22B_LH AT %I*	 : KL6inData22B;	(* linked to the KL6031 in the TwinCAT System Manager *)
	out22B_LH AT %Q* : KL6outData22B;	(* linked to the KL6031 in the TwinCAT System Manager *)
		
	//Thermal Bath(HEBC002-WA10) x 6EA
	RxBuf_TB : ComBuffer;
	TxBuf_TB : ComBuffer;
	in22B_TB AT %I*	 : KL6inData22B;	(* linked to the KL6031 in the TwinCAT System Manager *)
	out22B_TB AT %Q* : KL6outData22B;	(* linked to the KL6031 in the TwinCAT System Manager *)
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>