<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="P00_Main" Id="{12d14bbb-3227-4a5e-9ad7-16de4515baa4}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P00_Main
VAR
	netID: T_AmsNetID;// := '10.10.10.10.1.1';
	fbNetId: FB_GetLocalAmsNetId;
	fbRestart: TC_Restart;
	idx: INT;
	bOpState: BOOL;
    bTCAT_Net_err: BOOL;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF cm_TCAT_restart THEN		
	fbNetId(bExecute := cm_TCAT_restart, tTimeOut := T#1S);	
	IF fbNetId.bBusy = 0 THEN
		cm_TCAT_restart := 0;
		netID := fbNetId.AddrString;
		fbRestart(NETID := netID, RESTART := 1);
	END_IF	
END_IF


bOpState := 1;
FOR idx := 0 TO 1 DO
	IF N_COUPLER_STATES[idx] <> 0 THEN
		bOpState := 0;
		EXIT;
	END_IF
END_FOR
is_TCAT_OpState := bOpState;

bTCAT_Net_err := 0;
FOR idx := 0 TO 6 DO
	IF N_NET_STATES[idx] <> 0 THEN
		bTCAT_Net_err := 1;
		EXIT;
	END_IF
END_FOR   
is_TCAT_Net_err := bTCAT_Net_err;

IF is_TCAT_OpState THEN		
	P00_OP();
	//Init
	P01_Init_N_Retain();
    P02_Init_MC();
    	
	//Communication
	P02_P2P();
	
	//Input
	//REF_P02_KL1501();
	P11_Rx_TV();
	P12_Rx_IH();
	P13_DI_N_Check();
	P15_AI();
	//Check
	
	ACT_Status_Check();
	
	//Process
	P21_AL_WN();
	IF ing_FC = 0 AND is_RCP_runable AND cm_RCP_start THEN
		s_EN_EXE_RCP := NOT is_AL;		
	END_IF
		
	IF (di_SH_lo_limit AND di_VP_busy ) AND (cm_DOR_VAC OR di_DOR_VAC )THEN //di_PUMP_fail is B Contact
		s_EN_EXE_DOR_ATM := 0;
		s_EN_EXE_DOR_VAC := NOT is_AL;		
	END_IF
	IF s_EN_EXE_DOR_VAC AND cm_FC_stop THEN
		s_EN_EXE_DOR_VAC := 0;		
	END_IF
	
	IF EN_DOR_ATM AND (cm_DOR_ATM OR di_DOR_ATM) THEN
		s_EN_EXE_DOR_VAC := 0;
		s_EN_EXE_DOR_ATM := NOT is_AL;		
	END_IF	
	IF s_EN_EXE_DOR_ATM AND cm_FC_stop THEN
		s_EN_EXE_DOR_ATM := 0;		
	END_IF	
	
	IF ing_FC = 0 AND cm_ROT_caliStart THEN
		s_EN_EXE_ROT_CALI := NOT is_AL;		
	END_IF	
	
	IF s_EN_EXE_ROT_CALI AND cm_FC_stop THEN
		s_EN_EXE_ROT_CALI := 0;		
	END_IF	

	P22_RCP_Ctrl();	
	P24_Rot_Calibration();
	P25_US_Ctrl();
	
	//Etc
	P31_BypassV();
	P41_DOR_VAC();
	P41_DOR_Vac_Check();
	P42_DOR_ATM();
	P43_SH_UpDw();
	P49_MO_SRC();
		
	//Output	
	P62_Tx_TV();
	P63_Tx_IH();
	P53_DO_VV();
	P54_DO_ETC();
	P61_AO();
		
	cm_FC_stop := 0;		
	cm_RCP_start := 0;
	cm_DOR_VAC := 0;
	cm_DOR_ATM := 0;	
	cm_ROT_caliStart := 0;
		
END_IF

ing_FC := s_EN_EXE_RCP OR s_EN_EXE_DOR_VAC OR s_EN_EXE_DOR_ATM OR s_EN_EXE_ROT_CALI;

IF ing_FC THEN
	IF s_EN_EXE_RCP THEN pv_FC_ID := 1; END_IF
	IF s_EN_EXE_DOR_VAC THEN pv_FC_ID := 2; END_IF
	IF s_EN_EXE_DOR_ATM THEN pv_FC_ID := 3; END_IF
	IF s_EN_EXE_ROT_CALI THEN pv_FC_ID := 4; END_IF
ELSE
	pv_FC_ID := 0;
END_IF]]></ST>
    </Implementation>
    <Action Name="ACT_Status_Check" Id="{1d3c019b-e76c-4bb3-a130-3abc7e8d7f09}">
      <Implementation>
        <ST><![CDATA[is_RCP_runable := is_TCAT_Net_err = 0 AND is_AL = 0 AND is_RCP_loaded 
				  AND di_VP_busy AND is_DOR_VAC_ok;// AND di_IH_ready;

IF e_d_AUTO_IH_on AND sv_IH >= 1 AND is_AL = 0 THEN cm_IH := 1; END_IF;
IF sv_IH < 1 OR en_SH_UpDw THEN cm_IH := 0; END_IF;
IF e_d_AUTO_ROT_on AND pv_ROT < 1 AND sv_ROT >= 1 AND is_AL = 0 THEN cm_ROT := 1; END_IF;
IF s_EN_ROT_JOG = 0 AND s_EN_ROT_INCH = 0 AND cm_ROT AND sv_ROT < 1 THEN cm_ROT := 0; END_IF;
	]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="P00_Main">
      <LineId Id="15" Count="7" />
      <LineId Id="137" Count="0" />
      <LineId Id="24" Count="103" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="P00_Main.ACT_Status_Check">
      <LineId Id="2" Count="6" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>