<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="P63_Tx_IH" Id="{d0dbb158-94c7-4d70-9ed0-184fab69518e}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P63_Tx_IH
VAR
	r1: REAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Induction Heater Controller : E3508 

r1 := sv_IH * 10;
Tx_IH_TSV := REAL_TO_WORD(r1);

IF s_cm_RST AND is_IH_TIC_al THEN
	Tx_IH_AL_CR := 1;	
ELSE
	Tx_IH_AL_CR := 0;
END_IF

Tx_IH_ABS_HI := 1500;]]></ST>
    </Implementation>
    <LineIds Name="P63_Tx_IH">
      <LineId Id="10" Count="10" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>